chore: add audio dependencies

--- a/environment.yaml
+++ b/environment.yaml
@@ -13,3 +13,6 @@ dependencies:
       - transformers==4.48.3
       - omegaconf==2.3.0
       - numpy==1.26.4
+      - simpleaudio
+      - soundfile
+      - librosa
